플랫폼 개발

--- a/jwebppy/src/main/resources/templates/platform/mgmt/i18n/lang.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/i18n/lang.html
@@ -38,6 +38,9 @@
 	};
    	langModal.onShow = function()
 	{
+   		//Set focus to Suffix
+   		$("#FORM_lang input[name=seq]").focus();
+   		
 		if (JpUtilsString.isNotEmpty($("#FORM_lang input[name=lSeq]").val()))
 		{
 			$("#BTN_deleteLang").show();
