--- a/jwebppy/src/main/resources/static/portal/css/basic.css
+++ b/jwebppy/src/main/resources/static/portal/css/basic.css
@@ -352,6 +352,12 @@ input {
 	border-radius: 0 0 0 5px;
 }
 
+.condition-title{
+	font-weight: bold;
+	font-size:16px;
+	margin: 0px 0px 5px 0px; 
+}
+
 .input-area {
 	display: inline-block;
 	min-width:200px;
